2018-02-26  Franz Holzinger <franz@ttproducts.de>
    * new requirement: version 0.7.0 requires PHP 5.5.0 and TYPO3 6.2 as a minimum.

2018-01-09  Franz Holzinger <franz@ttproducts.de>
    * new feature: use the state INIT_ABORT and the message ABORT if an initialization of a transaction went wrong for any reason. E.g. after a page reload a token or a transaction number can have expired. Then the transactor extension treat it in the same way as an IDLE state and shows the connection form again.

2017-12-23  Franz Holzinger <franz@ttproducts.de>
    * new feature: use configurable maximumCharacters for a limit of the characters of the note field
    * improvement for the GatewayFactory singleton interface
    * do not use XHTML by default. The new marker ###XHTML_SLASH### can be replaced by the XHMTL end slash.

2017-11-08  Franz Holzinger <franz@ttproducts.de>
    * new feature: pass the transactor parameter request id for notification urls
    * move function getGatewayMode into the class GatewayBase
    * add new method transactionGetErrorDetails to store all errors in a variable inside of the gateway class
    * enhanced initialization method transactionInit to read in the methods.xml file and its attributes

2017-10-28  Franz Holzinger <franz@ttproducts.de>
    * use language object method getLL of LocalisationBase instead of tx_div2007_alpha5::getLL_fh003

2017-10-27  Franz Holzinger <franz@ttproducts.de>
    * rename namespace method usesBasket into useBasket
    * add new method transactionChangeValues to the GatewayBase for the change of a field in the current record of the transactor table
    * API modification: add the order number and the notification email
    * give extension informations in the details array transactionDetailsArray
    * bugfix for the usage of the gatewayid: This is the internal transaction id used by any external gateway

2017-10-07  Franz Holzinger <franz@ttproducts.de>